new  changes added can work

--- a/views/user/banned.ejs
+++ b/views/user/banned.ejs
@@ -126,7 +126,7 @@
        <p>Return to login</p> <button class="appeal-btn" onclick="window.location.href='/login'">Login</button>
         
         <div class="contact-info">
-            Need help? Contact support at zay@gmail.com.com
+            Need help? Contact support at zayshop@gmail.com
         </div>
     </div>
     
