--- a/views/admin/salesManagement.ejs
+++ b/views/admin/salesManagement.ejs
@@ -676,7 +676,7 @@
                         <div class="card">
                             <div class="card-header">
                               
-                                <span class="card-title">Total Sales</span>
+                                <span class="card-title">Total Sales(period)</span>
                                 <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                     stroke-width="2">
                                     <path d="M12 2L2 7L12 12L22 7L12 2Z"></path>
